Redesign projects section

--- a/index.html
+++ b/index.html
@@ -146,51 +146,52 @@
                   <div class="work">
                     <h2>Selected work</h2>
                     <div class="work--lockup">
-                      <ul class="slider">
-                        <li class="slider--item slider--item-left">
-                          <a href="#0">
-                            <div class="slider--item-image">
-                              <img src="assets/img/skywatch.jpg" alt="skywatch">
-                            </div>
-                            <p class="slider--item-title">skywatch</p>
-                            <p class="slider--item-description">open-source cloud base weather station and rain predictor.</p>
-                          </a>
-                        </li>
-                        <li class="slider--item slider--item-center">
-                          <a href="#0">
-                            <div class="slider--item-image">
-                              <img src="assets/img/plantd.jpg" alt="plantdoctor">
-                            </div>
-                            <p class="slider--item-title">Plant Doctor</p>
-                            <p class="slider--item-description">Ai based plant doctor.</p>
-                          </a>
-                        </li>
-                        <li class="slider--item slider--item-right">
-                          <a href="#0">
-                            <div class="slider--item-image">
-                              <img src="assets/img/watson.jpg" alt="defect detector">
-                            </div>
-                            <p class="slider--item-title">Watson-defect dectector</p>
-                            <p class="slider--item-description">Microsoft azure ai defect dectector.</p>
-                          </a>
-                        </li>
-                      </ul>
-                      <div class="slider--prev">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
-                        <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
-                          <path d="M561,1169C525,1155,10,640,3,612c-3-13,1-36,8-52c8-15,134-145,281-289C527,41,562,10,590,10c22,0,41,9,61,29
-                          c55,55,49,64-163,278L296,510h575c564,0,576,0,597,20c46,43,37,109-18,137c-19,10-159,13-590,13l-565,1l182,180
-                          c101,99,187,188,193,199c16,30,12,57-12,84C631,1174,595,1183,561,1169z"/>
-                        </g>
-                        </svg>
-                      </div>
-                      <div class="slider--next">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
-                        <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
-                          <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
-                        </g>
-                        </svg>
+                      <div class="projects-stack">
+                        <article class="project-card">
+                          <div class="project-card__media">
+                            <img src="assets/img/project-placeholder-1.svg" alt="Project placeholder graphic">
+                          </div>
+                          <div class="project-card__body">
+                            <p class="project-card__eyebrow">Data + Automation</p>
+                            <h3 class="project-card__title">Skywatch</h3>
+                            <p class="project-card__description">Open-source, cloud-based weather station with automated rain prediction and modular sensor support.</p>
+                            <ul class="project-card__meta">
+                              <li>IoT telemetry</li>
+                              <li>Forecasting</li>
+                              <li>Edge deploy</li>
+                            </ul>
+                          </div>
+                        </article>
+                        <article class="project-card">
+                          <div class="project-card__media">
+                            <img src="assets/img/project-placeholder-2.svg" alt="Project placeholder graphic">
+                          </div>
+                          <div class="project-card__body">
+                            <p class="project-card__eyebrow">Computer Vision</p>
+                            <h3 class="project-card__title">Plant Doctor</h3>
+                            <p class="project-card__description">AI-powered plant health assistant that flags disease risk, nutrient gaps, and next steps.</p>
+                            <ul class="project-card__meta">
+                              <li>Image inference</li>
+                              <li>Mobile-ready</li>
+                              <li>Care guides</li>
+                            </ul>
+                          </div>
+                        </article>
+                        <article class="project-card">
+                          <div class="project-card__media">
+                            <img src="assets/img/project-placeholder-3.svg" alt="Project placeholder graphic">
+                          </div>
+                          <div class="project-card__body">
+                            <p class="project-card__eyebrow">Industrial AI</p>
+                            <h3 class="project-card__title">Watson Defect Detector</h3>
+                            <p class="project-card__description">Azure-based quality control pipeline that highlights defects and prioritizes manual review.</p>
+                            <ul class="project-card__meta">
+                              <li>Surface inspection</li>
+                              <li>Azure AI</li>
+                              <li>Ops dashboard</li>
+                            </ul>
+                          </div>
+                        </article>
                       </div>
                     </div>
                   </div>
@@ -491,4 +492,3 @@
 </body>
 
 </html>
-
