Refine built-with logo strip layout

--- a/index.html
+++ b/index.html
@@ -112,27 +112,58 @@
       </section>
 
       <section id="built-with" class="built-with">
-        <li class="l-section">
-          <div class="built-with__container">
-            <header class="built-with__header">
-              <h2>Built with</h2>
-              <p>The stack I use to ship projects end-to-end.</p>
-            </header>
-            <div class="built-with__stack" role="list">
-              <span class="built-with__item" role="listitem" tabindex="0">Kubernetes</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Docker</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Micro-controllers</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Raspberry Pi</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Linux</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Deep Learning</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Machine Learning</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Google Apps Script</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Python</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Kedro</span>
-              <span class="built-with__item" role="listitem" tabindex="0">Feature Engineering</span>
+        <div class="built-with__container">
+          <header class="built-with__header">
+            <h2>Built with</h2>
+            <p>The stack I use to ship projects end-to-end.</p>
+          </header>
+          <div class="built-with__stack" role="list">
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=K8" alt="Kubernetes logo placeholder">
+              <span class="built-with__label">Kubernetes</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=DK" alt="Docker logo placeholder">
+              <span class="built-with__label">Docker</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=MC" alt="Micro-controllers logo placeholder">
+              <span class="built-with__label">Micro-controllers</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=RP" alt="Raspberry Pi logo placeholder">
+              <span class="built-with__label">Raspberry Pi</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=LN" alt="Linux logo placeholder">
+              <span class="built-with__label">Linux</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=DL" alt="Deep Learning logo placeholder">
+              <span class="built-with__label">Deep Learning</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=ML" alt="Machine Learning logo placeholder">
+              <span class="built-with__label">Machine Learning</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=GA" alt="Google Apps Script logo placeholder">
+              <span class="built-with__label">Google Apps Script</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=PY" alt="Python logo placeholder">
+              <span class="built-with__label">Python</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=KD" alt="Kedro logo placeholder">
+              <span class="built-with__label">Kedro</span>
+            </div>
+            <div class="built-with__tile" role="listitem" tabindex="0">
+              <img class="built-with__logo" src="https://via.placeholder.com/44x44.png?text=FE" alt="Feature Engineering logo placeholder">
+              <span class="built-with__label">Feature Engineering</span>
             </div>
           </div>
-        </li>
+        </div>
       </section>
 
               
@@ -570,7 +601,7 @@
 
   document.addEventListener("DOMContentLoaded", () => {
     const section = document.querySelector("#built-with");
-    const items = section ? section.querySelectorAll(".built-with__item") : [];
+    const items = section ? section.querySelectorAll(".built-with__tile") : [];
     const prefersReducedMotion = window.matchMedia("(prefers-reduced-motion: reduce)").matches;
 
     if (!section || items.length === 0) return;
