Add larger image rows to built-with strip

--- a/index.html
+++ b/index.html
@@ -213,93 +213,81 @@
               </div>
               <div class="built-with__row" data-direction="1">
                 <div class="built-with__track" role="list">
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">K8</span>
-                    <span class="built-with__label">Kubernetes</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=01" alt="Abstract placeholder 01">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">DK</span>
-                    <span class="built-with__label">Docker</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=02" alt="Abstract placeholder 02">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">MC</span>
-                    <span class="built-with__label">Micro-controllers</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=03" alt="Abstract placeholder 03">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">RP</span>
-                    <span class="built-with__label">Raspberry Pi</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=04" alt="Abstract placeholder 04">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">LX</span>
-                    <span class="built-with__label">Linux</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=05" alt="Abstract placeholder 05">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">DL</span>
-                    <span class="built-with__label">Deep Learning</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=06" alt="Abstract placeholder 06">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">ML</span>
-                    <span class="built-with__label">Machine Learning</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=01" alt="Abstract placeholder 01">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">GA</span>
-                    <span class="built-with__label">Google Apps Script</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=02" alt="Abstract placeholder 02">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">PY</span>
-                    <span class="built-with__label">Python</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=03" alt="Abstract placeholder 03">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">KD</span>
-                    <span class="built-with__label">Kedro</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=04" alt="Abstract placeholder 04">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">FE</span>
-                    <span class="built-with__label">Feature Engineering</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=05" alt="Abstract placeholder 05">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">K8</span>
-                    <span class="built-with__label">Kubernetes</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=06" alt="Abstract placeholder 06">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">DK</span>
-                    <span class="built-with__label">Docker</span>
+                </div>
+              </div>
+              <div class="built-with__row" data-direction="-1">
+                <div class="built-with__track" role="list">
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=07" alt="Abstract placeholder 07">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">MC</span>
-                    <span class="built-with__label">Micro-controllers</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=08" alt="Abstract placeholder 08">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">RP</span>
-                    <span class="built-with__label">Raspberry Pi</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=09" alt="Abstract placeholder 09">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">LX</span>
-                    <span class="built-with__label">Linux</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=10" alt="Abstract placeholder 10">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">DL</span>
-                    <span class="built-with__label">Deep Learning</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=11" alt="Abstract placeholder 11">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">ML</span>
-                    <span class="built-with__label">Machine Learning</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=12" alt="Abstract placeholder 12">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">GA</span>
-                    <span class="built-with__label">Google Apps Script</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=07" alt="Abstract placeholder 07">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">PY</span>
-                    <span class="built-with__label">Python</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=08" alt="Abstract placeholder 08">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">KD</span>
-                    <span class="built-with__label">Kedro</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=09" alt="Abstract placeholder 09">
                   </div>
-                  <div class="built-with__tile" role="listitem" tabindex="0">
-                    <span class="built-with__logo" aria-hidden="true">FE</span>
-                    <span class="built-with__label">Feature Engineering</span>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=10" alt="Abstract placeholder 10">
+                  </div>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=11" alt="Abstract placeholder 11">
+                  </div>
+                  <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=12" alt="Abstract placeholder 12">
                   </div>
                 </div>
               </div>
