modified:   index.html

--- a/index.html
+++ b/index.html
@@ -214,80 +214,80 @@
               <div class="built-with__row" data-direction="right">
                 <div class="built-with__track" role="list">
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=01" alt="Abstract placeholder 01">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=01" alt="placeholder 01">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=02" alt="Abstract placeholder 02">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=02" alt="placeholder 02">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=03" alt="Abstract placeholder 03">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=03" alt="placeholder 03">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=04" alt="Abstract placeholder 04">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=04" alt="placeholder 04">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=05" alt="Abstract placeholder 05">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=05" alt="placeholder 05">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=06" alt="Abstract placeholder 06">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=06" alt="placeholder 06">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=01" alt="Abstract placeholder 01">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=01" alt="placeholder 01">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=02" alt="Abstract placeholder 02">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=02" alt="placeholder 02">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=03" alt="Abstract placeholder 03">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=03" alt="placeholder 03">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=04" alt="Abstract placeholder 04">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=04" alt="placeholder 04">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=05" alt="Abstract placeholder 05">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=05" alt="placeholder 05">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=06" alt="Abstract placeholder 06">
+                    <img class="built-with__image" src="https://via.placeholder.com/260x170.png?text=06" alt="placeholder 06">
                   </div>
                 </div>
               </div>
               <div class="built-with__row" data-direction="left">
                 <div class="built-with__track" role="list">
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=07" alt="Abstract placeholder 07">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=07" alt="placeholder 07">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=08" alt="Abstract placeholder 08">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=08" alt="placeholder 08">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=09" alt="Abstract placeholder 09">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=09" alt="placeholder 09">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=10" alt="Abstract placeholder 10">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=10" alt="placeholder 10">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=11" alt="Abstract placeholder 11">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=11" alt="placeholder 11">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=12" alt="Abstract placeholder 12">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=12" alt="placeholder 12">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=07" alt="Abstract placeholder 07">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=07" alt="placeholder 07">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=08" alt="Abstract placeholder 08">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=08" alt="placeholder 08">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=09" alt="Abstract placeholder 09">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=09" alt="placeholder 09">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=10" alt="Abstract placeholder 10">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=10" alt="placeholder 10">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=11" alt="Abstract placeholder 11">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=11" alt="placeholder 11">
                   </div>
                   <div class="built-with__tile built-with__tile--image" role="listitem" tabindex="0">
-                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=12" alt="Abstract placeholder 12">
+                    <img class="built-with__image" src="https://via.placeholder.com/280x180.png?text=12" alt="placeholder 12">
                   </div>
                 </div>
               </div>
@@ -321,7 +321,7 @@
         ">
           <h2 style="font-size: 48px; margin-bottom: 20px;">About Me</h2>
           <p style="font-size: 18px; line-height: 1.8; margin-bottom: 16px;">
-            I'm someone who loves building, tinkering, and experimenting — especially with open-source software, single board computers, and microcontrollers. I'm currently diving deep into AI and data engineering, and I’m always exploring new ways to combine hardware and software in creative ways.
+            I'm someone who loves building, tinkering, and experimenting ,especially with open-source software, single board computers, and microcontrollers. I'm currently diving deep into AI and data engineering, and I’m always exploring new ways to combine hardware and software in creative ways.
           </p>
           <p style="font-size: 18px; line-height: 1.8; margin-bottom: 16px;">
             I enjoy helping friends build and train their AI models, and I often get involved in collaborative projects where I can share what I know and learn something new in the process.
@@ -347,7 +347,7 @@
                       <div class="projects-stack">
                         <article class="project-card">
                           <div class="project-card__media">
-                            <img src="assets/img/project-placeholder-1.svg" alt="Project placeholder graphic">
+                            <img src="assets/img/project-placeholder-1.svg" alt="Projectplaceholder graphic">
                           </div>
                           <div class="project-card__body">
                             <p class="project-card__eyebrow">Data + Automation</p>
@@ -362,7 +362,7 @@
                         </article>
                         <article class="project-card">
                           <div class="project-card__media">
-                            <img src="assets/img/project-placeholder-2.svg" alt="Project placeholder graphic">
+                            <img src="assets/img/project-placeholder-2.svg" alt="Projectplaceholder graphic">
                           </div>
                           <div class="project-card__body">
                             <p class="project-card__eyebrow">Computer Vision</p>
@@ -377,7 +377,7 @@
                         </article>
                         <article class="project-card">
                           <div class="project-card__media">
-                            <img src="assets/img/project-placeholder-3.svg" alt="Project placeholder graphic">
+                            <img src="assets/img/project-placeholder-3.svg" alt="Projectplaceholder graphic">
                           </div>
                           <div class="project-card__body">
                             <p class="project-card__eyebrow">Industrial AI</p>
